Added display:flex and flex-direction 0.0.1.3

--- a/style.css
+++ b/style.css
@@ -7,8 +7,18 @@
 	height: 100vh;
 	background-image: url('image/Layer 7.jpeg');
 	border: 1px solid #000;	
-		background-size: 100%;
+	background-size: 100%;
 	background-position: 0;
+display: flex;
+	display: -webkit- flex;
+	display: -moz- flex;
+	display: -ms- flex;
+	display: -o- flex;
+flex-direction: row;
+	-webkit- flex-direction: row;
+	-moz- flex-direction: row;
+	-ms- flex-direction: row;
+	-o- flex-direction: row;
 }
 .logo {
 
