--- a/style.css
+++ b/style.css
@@ -9,20 +9,17 @@
 	border: 1px solid #000;	
 	background-size: 100%;
 	background-position: 0;
-display: flex;
-	display: -webkit- flex;
-	display: -moz- flex;
-	display: -ms- flex;
-	display: -o- flex;
+display: block;
 flex-direction: row;
 	-webkit- flex-direction: row;
 	-moz- flex-direction: row;
 	-ms- flex-direction: row;
 	-o- flex-direction: row;
+	justify-content: center;
 }
 
 
-.header nav {
+#menu {
 display: flex;
 	display: -webkit- flex;
 	display: -moz- flex;
@@ -34,4 +31,15 @@ flex-direction: row;
 	-ms- flex-direction: row;
 	-o- flex-direction: row;
 	justify-content: center;
+}
+
+.links {
+	list-style-type: none;
+	cursor: pointer;
+	margin-left: 77px;
+	text-align: center;
+}
+
+a {
+	text-decoration: none;
 }
