--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
 	margin: 0;
+	font-family: 'Lato', sans-serif;
 } 
 
 .header {
@@ -38,8 +39,15 @@ flex-direction: row;
 	cursor: pointer;
 	margin-left: 77px;
 	text-align: center;
+	padding-top: 66px;
 }
 
 a {
 	text-decoration: none;
+	text-transform: uppercase;
+	font-size: 16px;
+}
+
+.logo {
+	margin:60px 105px;
 }
