--- a/style.css
+++ b/style.css
@@ -3,51 +3,76 @@
 	font-family: 'Lato', sans-serif;
 } 
 
+.flex {
+		display: -webkit-flex;
+		display: -moz-flex;
+		display: -ms-flex;
+		display: -o-flex;
+	display: flex;
+}
+.row {
+		display: -webkit-flex;
+		display: -moz-flex;
+		display: -ms-flex;
+		display: -o-flex;
+	display: flex;
+		-webkit-flex-direction: row;
+		-moz-flex-direction: row;
+		-ms-flex-direction: row;
+		-o-flex-direction: row;
+	flex-direction: row;
+}
+.col {
+		display: -webkit-flex;
+		display: -moz-flex;
+		display: -ms-flex;
+		display: -o-flex;
+	display: flex;
+		-webkit-flex-direction: column;
+		-moz-flex-direction: column;
+		-ms-flex-direction: column;
+		-o-flex-direction: column;
+	flex-direction: column;
+}
+
 .header {
 	max-width: 1920px;
 	height: 100vh;
 	background-image: url('image/Layer 7.jpeg');
-	border: 1px solid #000;	
+	background-repeat: no-repeat;
 	background-size: 100%;
 	background-position: 0;
-display: block;
-flex-direction: row;
-	-webkit- flex-direction: row;
-	-moz- flex-direction: row;
-	-ms- flex-direction: row;
-	-o- flex-direction: row;
 	justify-content: center;
 }
 
 
 #menu {
-display: flex;
-	display: -webkit- flex;
-	display: -moz- flex;
-	display: -ms- flex;
-	display: -o- flex;
-flex-direction: row;
-	-webkit- flex-direction: row;
-	-moz- flex-direction: row;
-	-ms- flex-direction: row;
-	-o- flex-direction: row;
-	justify-content: center;
+	margin: 0;
+	padding: 0;
+	justify-content: space-between;
+	width: 615px;
 }
 
-.links {
+.header nav {
+	justify-content: center;
 	list-style-type: none;
 	cursor: pointer;
-	margin-left: 77px;
 	text-align: center;
 	padding-top: 66px;
 }
+/*		святой пиздец	*/
+.logo {
+	height: 88px;
+	width: 93px;
+}
+.links {
+	list-style-type: none;
+}
 
+/*	======================	*/
 a {
 	text-decoration: none;
 	text-transform: uppercase;
 	font-size: 16px;
 }
 
-.logo {
-	margin:60px 105px;
-}
