--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@
 	text-align: center;
 	padding-top: 66px;
 }
-/*		святой пиздец	*/
+
 .logo {
 	height: 88px;
 	width: 93px;
@@ -71,10 +71,13 @@
 	list-style-type: none;
 }
 
-/*	======================	*/
+
 a {
 	text-decoration: none;
 	text-transform: uppercase;
 	font-size: 16px;
+	font-weight: 600;
+	color: #000;
+	letter-spacing: 3px;
 }
 
